--- a/12108393_DjaluGalang.html
+++ b/12108393_DjaluGalang.html
@@ -7,10 +7,7 @@
     <title>Masbro</title>
 </head>
 <body>
-    <ul>
-        <li>Home</li>
-        <li>About</li>
-        <li>Contact</li>
-    </ul>
+    <h1>Djalu</h1>
+    <h1>12108393</h1>
 </body>
 </html>
